objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lead Unqualified</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>UnQ Converted</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BroadbandStatus__c</fullName>
        <formula>IF(PostalCode = &apos;L4B 1Y3&apos; || PostalCode = &apos;H4Z 9Z9&apos; , &apos;Ok&apos;,
IF(PostalCode = &apos;M4B 1B3&apos; || PostalCode = &apos;K0M 9Z9&apos;, &apos;OkCheck&apos;, &apos;NotOk&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BroadbandStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacted_with_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacted with Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check whether user has received promotional messages from us</description>
        <label>Promotion Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unqualified_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to identify whether the lead is unqualified or not</description>
        <label>Unqualified Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremisesId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Premises</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductInterestData__c</fullName>
        <description>JSON (or similar) structured data describing the set of, or types of, products in which this lead is interested.</description>
        <label>Product Interest Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductInterest__c</fullName>
        <description>Picklist outlining the category of this lead&apos;s primary product interest. Customize as desired.</description>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <recordTypes>
        <fullName>Default_Lead_Record_type</fullName>
        <active>true</active>
        <businessProcess>Default Lead</businessProcess>
        <label>Default Lead Record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Unqualified</fullName>
        <active>true</active>
        <businessProcess>Lead Unqualified</businessProcess>
        <label>Lead Unqualified</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Contacted_with_Customers</fullName>
        <active>true</active>
        <description>Contacted_with_Customers</description>
        <errorConditionFormula>IF(ISPICKVAL(Status, &apos;Contacted&apos;) &amp;&amp; Contacted_with_Customer__c =false,  true, false)</errorConditionFormula>
        <errorMessage>&quot;Please check the Contacted with Customer field&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Do_not_Convert_Unqualified_lead</fullName>
        <active>true</active>
        <description>Do_not_Convert_Unqualified_lead</description>
        <errorConditionFormula>IF(  ISPICKVAL(Status, &apos;Qualified&apos;) &amp;&amp;  Unqualified_Lead__c = true  , true, false)</errorConditionFormula>
        <errorMessage>&quot;This lead is not qualified to be converted&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotional_Email</fullName>
        <active>true</active>
        <description>Promotional Email before converting to Nurturing status</description>
        <errorConditionFormula>IF( ISPICKVAL( Status , &apos;Nurturing&apos;) &amp;&amp;  Promotion_Email__c = false , true, false)</errorConditionFormula>
        <errorMessage>&quot;Promotional Email field should be checked&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_Read_only</fullName>
        <active>false</active>
        <description>to make page layout not editable.</description>
        <errorConditionFormula>IF(ISPICKVAL(Status,&apos;Unqualified&apos;)||
ISPICKVAL(Status,&apos;UnQ Converted&apos;)||
ISCHANGED(Status) ||
ISCHANGED(Address) ||
ISCHANGED(Company) ||
ISCHANGED(Status) ||
ISCHANGED(NumberOfEmployees) ||
ISCHANGED(AnnualRevenue) ||
ISCHANGED(Industry) ||
ISCHANGED(LeadSource) ||
ISCHANGED(Contacted_with_Customer__c) ||
ISCHANGED(Phone) ||
ISCHANGED(Promotion_Email__c) ||
ISCHANGED(Unqualified_Lead__c) ||
ISCHANGED(Email) ||
ISCHANGED(Rating) ||
ISCHANGED(Title) ||
ISCHANGED(Website), true , false)</errorConditionFormula>
        <errorMessage>You Can not edit this page.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unqualified_Rule</fullName>
        <active>true</active>
        <description>This validation rule is used to identify whether lead is unqualified or not</description>
        <errorConditionFormula>IF( ISPICKVAL( Status , &apos;Unqualified&apos;) &amp;&amp;  Unqualified_Lead__c = false , true, false)</errorConditionFormula>
        <errorMessage>&apos;&apos;Please check Unqualified Lead field&quot;</errorMessage>
    </validationRules>
</CustomObject>